<resources>
    <string name="app_name">AcmeCoffee</string>
    <!-- Relativo a account -->
    <string name="account_email">Email</string>
    <string name="account_name">Name</string>
    <string name="account_password">Password</string>
    <string name="account_confirm_password">Confirm password</string>
    <string name="account_nif">NIF</string>

    <!-- Relativo a activity register -->
    <string name="register_label">Create Account</string>
    <string name="register_button">Create</string>
    <string name="already_have_account_button">Already have an account.</string>

    <!-- Relativo a activity login -->
    <string name="login_label">Login</string>
    <string name="login_button">Login</string>
    <string name="dont_have_account_button">Don\'t have account.</string>
    <string name="title_activity_homepage">HomepageActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Relativo à navigation -->
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="nif">NIF</string>
    <string name="update_voucher">Update Voucher</string>
    <string name="update_menu">Update Menu</string>
    <string name="logout">Logout</string>
    <string name="update_requests">Update Requests</string>

    <!-- Relativo aos vouchers -->
    <string name="voucher_types">Voucher types</string>
    <string name="coffee_voucher">Free coffee voucher</string>
    <string name="discount_voucher">5% discount voucher</string>
    <string name="coffee_description">One free coffee voucher is offered to the costumer whenever he consumes 3 coffees.</string>
    <string name="discount_description">A 5% discount voucher is offered whenever the accumulated payed values from a customer surpasses a new multiple of 100€.</string>
    <string name="quantity">Quantity: </string>
    <string name="title_activity_request">RequestActivity</string>

    <!-- Relativo aos pedidos -->
    <string name="total">Total:  </string>
    <string name="add_item">Add Item</string>
    <string name="send_request">Send</string>
    <string name="add_selected_item">Add selected item</string>
    <string name="select_voucher">Use a voucher: </string>
    <string name="free_coffee">Free coffee</string>
    <string name="five_discount">5% Discount</string>
    <string name="no_voucher">No voucher</string>
    <string name="select_item">Choose item</string>
    <string name="back_to_home_page">Back to the home page</string>

    <!-- Relativo ao histórico -->
    <string name="requests_record">Requests Record</string>
    <string name="money_spent">Total money spent: </string>


    <!-- Relativo à pagina principal -->
    <string name="make_request">Make a Request</string>
    <string name="menu">Menu</string>
    <string name="vouchers">Vouchers</string>
    <string name="request_record">Requests Record</string>
</resources>
