<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="4dip"
    android:shrinkColumns="1"
    android:stretchColumns="1">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/HeaderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_label"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/register_email"
            android:inputType="textEmailAddress"
            android:layout_weight="1"
            android:hint="@string/account_email"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/register_name"
            android:inputType="text"
            android:layout_weight="1"
            android:hint="@string/account_name"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/register_password"
            android:inputType="textPassword"
            android:layout_weight="1"
            android:hint="@string/account_password"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/register_confirm_password"
            android:inputType="textPassword"
            android:layout_weight="1"
            android:hint="@string/account_confirm_password"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/register_nif"
            android:inputType="text"
            android:layout_weight="1"
            android:hint="@string/account_nif"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal" >


        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button"
            android:textColor="@color/colorSmooth"
            android:textStyle="bold"
            android:backgroundTint="@color/colorPrimary"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >


        <Button
            android:id="@+id/already_have_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account_button"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="12sp"
            android:background="@android:color/transparent"/>
    </TableRow>


</TableLayout>