<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.feup.cmov.acmecoffee.RequestActivity"
    android:orientation="vertical">

    <ListView
        android:id="@+id/requestListView"
        android:layout_width="match_parent"
        android:layout_height="459dp">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/total_money"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:paddingLeft="15dp"
            android:text="@string/total"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp" />

        <Button
            android:id="@+id/addItem"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_item"
            android:onClick="goToAddItem"/>

        <Button
            android:id="@+id/sendRequest"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send_request" />

    </LinearLayout>
</LinearLayout>
